# global-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: load-timeseries.yml
plans/: hf-to-neon-timeseries.md
src/global_data_pipeline/: __init__.py  cli.py  config.py  logging.py  transform.py
src/global_data_pipeline/publish/: database.py  huggingface.py  ts_database.py
src/global_data_pipeline/sources/: __init__.py  base.py  imf.py  un_sdg.py  world_bank.py
src/global_data_pipeline/storage/: local.py  state.py
src/global_data_pipeline/storage/db/: models.py
tests/: conftest.py  test_imf.py  test_publish.py  test_storage.py  test_transform.py  test_un_sdg.py  test_world_bank.py
